--- a/components/css/UserTargetingModule.module.css
+++ b/components/css/UserTargetingModule.module.css
@@ -5,7 +5,6 @@
   align-items: center;
   width: 100%;
   height: 200px;
-  padding: 1.4rem 0;
 }
 
 .loading {
@@ -22,6 +21,9 @@
   height: var(--userIconSize);
   width: var(--userIconSize);
   text-align: center;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .userTrue {
