--- a/components/css/UserTargetingModule.module.css
+++ b/components/css/UserTargetingModule.module.css
@@ -21,6 +21,7 @@
   height: var(--userIconSize);
   width: var(--userIconSize);
   text-align: center;
+  font-size: 20px;
 
   display: flex;
   flex-direction: column;
